--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
     ports:
       - "11211:11211"
   pgbouncer:
-    image: mbed/pgbouncer
+    image: brainsam/pgbouncer
     environment:
       PG_ENV_POSTGRESQL_USER: pgbouncer
       PG_ENV_POSTGRESQL_PASS: pgbouncer
